<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Uriah Shaul Mandel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bald_background"
    android:orientation="vertical">

    <com.bald.uriah.baldphone.views.BaldTitleBar
        android:id="@+id/bald_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_4"
        app:title="@string/add_alarm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <com.bald.uriah.baldphone.views.BaldEditText
            android:id="@+id/alarm_edit_name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.7"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/alarm_name"
            android:inputType="text"
            android:textSize="@dimen/huge" />

        <include layout="@layout/hour_and_minute_choosers" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_sunday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_monday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_tuesday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="@+id/monday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_wednesday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toTopOf="@+id/saturday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunday" />

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_thursday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_friday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioButton
                android:id="@+id/rb_every_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/repeats_every_day"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:text="@string/choose_saturday"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <RadioButton
                android:id="@+id/rb_once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:buttonTint="?bald_decoration_on_background"
                android:checked="true"
                android:text="@string/only_once"
                android:textColor="?bald_text_on_button"
                android:textSize="@dimen/small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.bald.uriah.baldphone.views.BaldButton
            android:id="@+id/bt_alarm_submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/style_for_buttons_pill"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="?bald_text_on_button"
            android:textSize="@dimen/large" />
    </LinearLayout>
</LinearLayout>



